tests/paczka1/small_fuzzy/81306294.err
Error in line 5: D68W9 S969 88,2
Error in line 8: D68W9 S135 25,1
Error in line 6: WHSX70jplLf A462 84,3
Error in line 9: D68W9 S969 26,3
